info sect spacing fix, quote sect finished

--- a/style.css
+++ b/style.css
@@ -102,11 +102,16 @@ body {
   color: #1f2937;
 }
 
+.information {
+  margin-bottom: 150px;
+}
+
 .box_container {
   display: flex;
   justify-content: center;
   gap: 150px;
   flex-wrap: wrap;
+  margin-bottom: 50px;
 }
 
 .box_item {
@@ -127,4 +132,31 @@ body {
   text-align: center;
   font-size: 16px;
   color: #555;
+}
+
+.quote_sect {
+  background: #E5E7EB;
+  padding: 80px 0;
+  margin-bottom: 150px;
+}
+
+.quote_container {
+  max-width: 900px;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+  font-weight: lighter;
+}
+
+.quote_name {
+  font-size: 28px;
+  text-align: right;
+  font-weight: bold;
+  margin-top: 10px;
 }
